<resources>
    <string name="app_name">StudSked</string>
    <string name="_2024">Ноябрь 2024</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="name_of_news">Name of news</string>
    <string name="date_of_news">Date of news</string>
    <string name="more_detailed">Подробнее</string>
    <string name="select_tags">Выбрать теги:</string>
    <string name="students">Студентам</string>
    <string name="applicants">Абитуриентам</string>
    <string name="university">ВУЗ</string>
    <string name="employees">Сотрудникам</string>
    <string name="university_name">ИВТиПТ</string>
    <string name="samodelka">Самоделка</string>
    <string name="news">Новости</string>
    <string name="shedule">Пары</string>
    <string name="brs">БРС</string>
    <string name="profile">Профиль</string>
    <string name="discipline_not_completed">Эта дисциплина еще не заполнена</string>
    <string name="result">Итог</string>
    <string name="hyphen">/</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="number_of_lesson">Number of lesson</string>
    <string name="time">Time</string>
    <string name="teacher">Teacher</string>
    <string name="audience">Audience</string>
    <string name="category">Категория</string>
    <string name="data">Дата</string>
    <string name="author">Автор</string>
    <string name="author_of_news">Author of news</string>
    <string name="last_news">Последние новости</string>
    <string name="last_important_news">Последние важные новости</string>
    <string name="dot">•</string>
    <string name="comma">,</string>
    <string name="shedule1">Расписание</string>
    <string name="up_week">Верхняя неделя</string>
    <string name="type_audience">Type + audience</string>
    <string name="subgroup">Number of subgroup</string>
    <string name="underlined_text"><u>Добавить группу</u></string>
    <string name="notification_title">Напоминание о паре</string>
    <string name="no_audience_specified">Аудитория не указана</string>
</resources>