<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lesson_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/shape_rounded"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingHorizontal="16.5dp"
    android:paddingVertical="17dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="5dp"
                    android:src="@drawable/ic_type_lesson"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:fontFeatureSettings="lnum"
                    android:id="@+id/lesson_list_type_and_audience_compact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:gravity="center"
                    android:text="@string/type_audience"
                    android:textColor="#777883"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:fontFeatureSettings="lnum"
                android:id="@+id/lesson_list_title_compact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:fontFeatureSettings="lnum"
                android:id="@+id/lesson_list_number_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/number_of_lesson"
                android:textColor="#8A6EFF"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="end"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="10dp"
                android:src="@drawable/ic_points"
                tools:ignore="ContentDescription" />

            <TextView
                android:fontFeatureSettings="lnum"
                android:id="@+id/lesson_list_time_compact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway_medium"
                android:gravity="bottom"
                android:text="@string/time"
                android:textColor="#8A6EFF"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>