<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#16181C">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top_rounded">

        <ImageView
            android:id="@+id/filter_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/ic_line_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/select_tags"
            android:textColor="#777883"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_close" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/selected_categories_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="7dp"
            app:alignItems="flex_start"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <!--        <LinearLayout-->
        <!--            android:id="@+id/selected_categories_container"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginHorizontal="16dp"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
        <!--            android:layout_marginBottom="15dp"/>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_categories_container">

            <TextView
                android:id="@+id/filter_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/students"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter_applicant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/applicants"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/filter_student"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter_uni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/university"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/filter_applicant"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/filter_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/employees"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter_student" />

            <TextView
                android:id="@+id/filter_fvt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/university_name"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/filter_employee"
                app:layout_constraintTop_toBottomOf="@+id/filter_applicant" />

            <TextView
                android:id="@+id/filter_samodelka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/category_not_choosen_back"
                android:fontFamily="@font/raleway"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:text="@string/samodelka"
                android:textColor="#B8B7B7"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/filter_fvt"
                app:layout_constraintTop_toBottomOf="@+id/filter_uni" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>