<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/shape_rounded"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="17dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFeatureSettings="lnum"
                android:id="@+id/news_desc_name_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/name_of_news"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/important_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_important_news"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/categories_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:fontFeatureSettings="lnum"
                android:id="@+id/news_desc_date_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway"
                android:gravity="start"
                android:text="@string/date_of_news"
                android:textColor="#777883"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:fontFeatureSettings="lnum"
                    android:id="@+id/news_desc_button_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway"
                    android:text="@string/more_detailed"
                    android:textColor="#B8B7B7"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_next_news"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>